[package]
name = "bevy-panic-handler"
version = "2.2.0"
edition = "2021"
authors = ["Daniel Yoon"]
description = "A Bevy plugin that creates a popup message and logs to error on panic"
repository = "https://github.com/Koranir/bevy-panic-handler"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "panic", "popup"]
categories = ["game-engines"]

[dependencies]
bevy = { version = "^0.13.0", default-features = false }
msgbox = "0.7.0"
